# retailwind

./: README.md  pyproject.toml
retailwind/: __main__.py  interactive.py  parser.py  tailwind.py  translator.py
tests/: compiled.css  conftest.py  test_interactive.py  test_main.py  test_parser.py  test_translator.py
